[gd_scene load_steps=24 format=3 uid="uid://c1mcmbcrw00tk"]

[ext_resource type="Script" path="res://guns/bomb.gd" id="1_cbbdx"]
[ext_resource type="Texture2D" uid="uid://b1ibp54vhya7o" path="res://art/potato_masher.png" id="2_21yjr"]
[ext_resource type="Texture2D" uid="uid://cpi3ynhrkwjem" path="res://art/explosion_anim.png" id="3_y6kbj"]
[ext_resource type="AudioStream" uid="uid://brdshstxyxdy1" path="res://art/554289__klankbeeld__mortar-grenade-shell-006.wav" id="4_7adpx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_p8o7j"]
atlas = ExtResource("3_y6kbj")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_smpic"]
atlas = ExtResource("3_y6kbj")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kni1s"]
atlas = ExtResource("3_y6kbj")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1ei6"]
atlas = ExtResource("3_y6kbj")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7udpv"]
atlas = ExtResource("3_y6kbj")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7778b"]
atlas = ExtResource("3_y6kbj")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vf2wv"]
atlas = ExtResource("3_y6kbj")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvfdv"]
atlas = ExtResource("3_y6kbj")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x22ck"]
atlas = ExtResource("3_y6kbj")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pidjx"]
atlas = ExtResource("3_y6kbj")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gekb3"]
atlas = ExtResource("3_y6kbj")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2sogu"]
atlas = ExtResource("3_y6kbj")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjmjp"]
atlas = ExtResource("3_y6kbj")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6s5xo"]
atlas = ExtResource("3_y6kbj")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ni2ec"]
atlas = ExtResource("3_y6kbj")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2gec"]
atlas = ExtResource("3_y6kbj")
region = Rect2(192, 192, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_l2va4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8o7j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smpic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kni1s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1ei6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7udpv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7778b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vf2wv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvfdv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x22ck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pidjx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gekb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2sogu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yjmjp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6s5xo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ni2ec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2gec")
}],
"loop": false,
"name": &"boom",
"speed": 30.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8dv5p"]
size = Vector2(2, 8)

[sub_resource type="CircleShape2D" id="CircleShape2D_8i5lm"]
radius = 38.3275

[node name="Bomb" type="Area2D"]
script = ExtResource("1_cbbdx")
rotation_speed = 20.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_21yjr")

[node name="bombEffectsPlayer" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_l2va4")
animation = &"boom"
frame = 15
frame_progress = 1.0

[node name="boom_audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_7adpx")

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_8dv5p")

[node name="explosion_collision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_8i5lm")
disabled = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
